--- a/deno.json
+++ b/deno.json
@@ -34,6 +34,7 @@
     "@services/": "./services/",
     "@islands/": "./islands/",
     "@styles/": "./styles/",
+    "@utils/": "./utils/",
     "tailwindcss": "npm:tailwindcss@3.3.5",
     "tailwindcss/": "npm:/tailwindcss@3.3.5/",
     "tailwindcss/plugin": "npm:/tailwindcss@3.3.5/plugin.js"
