--- a/deno.json
+++ b/deno.json
@@ -27,8 +27,10 @@
     "preact/": "https://esm.sh/preact@10.19.2/",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.1",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.0",
-    "$std/": "https://deno.land/std@0.208.0/",
+    "$std/": "https://deno.land/std@0.210.0/",
     "supabase": "https://esm.sh/@supabase/supabase-js@2",
+    "supabase/": "https://esm.sh/@supabase/supabase-js@2/",
+    "@supabase/ssr": "https://esm.sh/@supabase/ssr",
     "@models/": "./models/",
     "@components/": "./components/",
     "@services/": "./services/",
