💚 Update build setup

--- a/deno.json
+++ b/deno.json
@@ -45,5 +45,13 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "preact"
+  },
+  "deploy": {
+    "project": "9922ab92-ef16-4f9c-be6c-cb236795046f",
+    "exclude": [
+      "**/node_modules"
+    ],
+    "include": [],
+    "entrypoint": "main.ts"
   }
 }
