--- a/.github/workflows/deno_deploy.yaml
+++ b/.github/workflows/deno_deploy.yaml
@@ -1,9 +1,10 @@
-name: Deploy
+name: deno_deploy
 on:
   push:
     branches: [main]
   pull_request:
     branches: main
+  workflow_dispatch:
 
 jobs:
   deploy:
@@ -24,10 +25,13 @@ jobs:
           deno-version: v1.x
 
       - name: Build step
+        env:
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         run: "deno task build" # 📝 Update the build command(s) if necessary
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "example-project" # 📝 Update the deploy project name if necessary
+          project: "near-bison-71" # 📝 Update the deploy project name if necessary
           entrypoint: "./main.ts" # 📝 Update the entrypoint if necessary
