✨ New icon library

--- a/deno.json
+++ b/deno.json
@@ -40,7 +40,7 @@
     "tailwindcss": "npm:tailwindcss@3.3.5",
     "tailwindcss/": "npm:/tailwindcss@3.3.5/",
     "tailwindcss/plugin": "npm:/tailwindcss@3.3.5/plugin.js",
-    "lucide-icons": "npm:lucide-preact@0.302.0"
+    "@tabler-icons-url/": "https://deno.land/x/tabler_icons_tsx@0.0.5/tsx/"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
