--- a/deno.json
+++ b/deno.json
@@ -28,9 +28,15 @@
     "@islands/": "./islands/",
     "@styles/": "./styles/",
     "@utils/": "./utils/",
+    "@hooks/": "./hooks/",
     "tailwindcss": "npm:tailwindcss@3.3.5",
     "tailwindcss/": "npm:/tailwindcss@3.3.5/",
     "tailwindcss/plugin": "npm:/tailwindcss@3.3.5/plugin.js",
+    "@radix-ui/react-toast": "npm:@radix-ui/react-toast",
+    "tailwindcss-animate": "npm:tailwindcss-animate",
+    "class-variance-authority": "npm:class-variance-authority",
+    "clsx": "npm:clsx",
+    "tailwind-merge": "npm:tailwind-merge",
     "@tabler-icons-url/": "https://deno.land/x/tabler_icons_tsx@0.0.5/tsx/"
   },
   "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" },
