--- a/deno.json
+++ b/deno.json
@@ -37,7 +37,36 @@
     "clsx": "https://esm.sh/clsx@2.0.0",
     "tailwind-merge": "https://esm.sh/tailwind-merge@1.14.0",
     "@tabler-icons-url/": "https://deno.land/x/tabler_icons_tsx@0.0.5/tsx/",
-    "@radix-ui/react-toast" : "https://esm.sh/v135/@radix-ui/react-toast@latest?alias=react:preact/compat,react-dom:preact/compat,@types/react:preact/compat"
+    "@babel/runtime/helpers/esm/extends": "https://esm.sh/@babel/runtime@7.23.1/helpers/esm/extends",
+    "@radix-ui/react-toast": "https://esm.sh/*@radix-ui/react-toast@1.1.5?alias=react:preact/compat,react-dom:preact/compat,@types/react:preact/compat",
+    "@radix-ui/primitive": "https://esm.sh/*@radix-ui/primitive@1.0.1",
+    "@radix-ui/number": "https://esm.sh/@radix-ui/number@1.0.1",
+    "@radix-ui/react-arrow": "https://esm.sh/v132/*@radix-ui/react-arrow@1.0.3?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-collapsible": "https://esm.sh/v132/*@radix-ui/react-collapsible@1.0.3?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-collection": "https://esm.sh/v132/*@radix-ui/react-collection@1.0.3?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-compose-refs": "https://esm.sh/v132/*@radix-ui/react-compose-refs@1.0.1?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-context": "https://esm.sh/v132/*@radix-ui/react-context@1.0.1?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-dialog": "https://esm.sh/v132/*@radix-ui/react-dialog@1.0.5?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-direction": "https://esm.sh/v132/*@radix-ui/react-direction@1.0.1?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-dismissable-layer": "https://esm.sh/v132/*@radix-ui/react-dismissable-layer@1.0.5?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-focus-guards": "https://esm.sh/v132/*@radix-ui/react-focus-guards@1.0.1?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-focus-scope": "https://esm.sh/v132/*@radix-ui/react-focus-scope@1.0.4?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-id": "https://esm.sh/v132/*@radix-ui/react-id@1.0.1?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-label": "https://esm.sh/v132/*@radix-ui/react-label@2.0.2?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-menu": "https://esm.sh/v132/*@radix-ui/react-menu@2.0.6?alias=react:preact/compat,react-dom:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-popper": "https://esm.sh/v132/*@radix-ui/react-popper@1.1.3?alias=react:preact/compat,react-dom:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-portal": "https://esm.sh/v132/*@radix-ui/react-portal@1.0.4?alias=react:preact/compat,react-dom:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-presence": "https://esm.sh/v132/*@radix-ui/react-presence@1.0.1?alias=react:preact/compat,react-dom:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-primitive": "https://esm.sh/v132/*@radix-ui/react-primitive@1.0.3?alias=react:preact/compat,react-dom:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-slot": "https://esm.sh/v132/*@radix-ui/react-slot@1.0.2?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-use-controllable-state": "https://esm.sh/v132/*@radix-ui/react-use-controllable-state@1.0.1?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-use-callback-ref": "https://esm.sh/v132/*@radix-ui/react-use-callback-ref@1.0.1?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-use-escape-keydown": "https://esm.sh/v132/*@radix-ui/react-use-escape-keydown@1.0.3?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-use-layout-effect": "https://esm.sh/v132/*@radix-ui/react-use-layout-effect@1.0.1?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-use-previous": "https://esm.sh/v132/*@radix-ui/react-use-previous@1.0.1?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-roving-focus": "https://esm.sh/v132/*@radix-ui/react-roving-focus@1.0.4?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-use-size": "https://esm.sh/v132/*@radix-ui/react-use-size@1.0.1?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-visually-hidden": "https://esm.sh/v132/*@radix-ui/react-visually-hidden@1.0.3?alias=react:preact/compat,@types/react:preact/compat"
   },
   "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" },
   "deploy": {
