--- a/deno.json
+++ b/deno.json
@@ -25,6 +25,7 @@
     "@supabase/ssr": "https://esm.sh/@supabase/ssr",
     "@models/": "./models/",
     "@components/": "./components/",
+    "@contexts/": "./contexts/",
     "@services/": "./services/",
     "@islands/": "./islands/",
     "@styles/": "./styles/",
@@ -67,7 +68,11 @@
     "@radix-ui/react-use-previous": "https://esm.sh/v132/*@radix-ui/react-use-previous@1.0.1?alias=react:preact/compat,@types/react:preact/compat",
     "@radix-ui/react-roving-focus": "https://esm.sh/v132/*@radix-ui/react-roving-focus@1.0.4?alias=react:preact/compat,@types/react:preact/compat",
     "@radix-ui/react-use-size": "https://esm.sh/v132/*@radix-ui/react-use-size@1.0.1?alias=react:preact/compat,@types/react:preact/compat",
-    "@radix-ui/react-visually-hidden": "https://esm.sh/v132/*@radix-ui/react-visually-hidden@1.0.3?alias=react:preact/compat,@types/react:preact/compat"
+    "@radix-ui/react-visually-hidden": "https://esm.sh/v132/*@radix-ui/react-visually-hidden@1.0.3?alias=react:preact/compat,@types/react:preact/compat",
+    "gsap": "https://esm.sh/gsap@3.12.5",
+    "gsap/": "https://esm.sh/gsap@3.12.5/",
+    "@gsap/react": "npm:@gsap/react@2.1.1",
+    "hotkeys-js": "https://esm.sh/hotkeys-js@3.13.7"
   },
   "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" },
   "deploy": {
