--- a/deno.json
+++ b/deno.json
@@ -24,17 +24,23 @@
     "@supabase/ssr": "https://esm.sh/@supabase/ssr",
     "@models/": "./models/",
     "@components/": "./components/",
+    "@contexts/": "./contexts/",
     "@services/": "./services/",
     "@islands/": "./islands/",
     "@styles/": "./styles/",
     "@utils/": "./utils/",
+    "@hooks/": "./hooks/",
     "tailwindcss": "npm:tailwindcss@3.3.5",
     "tailwindcss/": "npm:/tailwindcss@3.3.5/",
     "tailwindcss/plugin": "npm:/tailwindcss@3.3.5/plugin.js",
     "@tabler-icons-url/": "https://deno.land/x/tabler_icons_tsx@0.0.5/tsx/",
     "class-variance-authority": "https://esm.sh/class-variance-authority@0.7.0",
     "clsx": "https://esm.sh/clsx@2.0.0",
-    "tailwind-merge": "https://esm.sh/tailwind-merge@1.14.0"
+    "tailwind-merge": "https://esm.sh/tailwind-merge@1.14.0",
+    "gsap": "https://esm.sh/gsap@3.12.5",
+    "gsap/": "https://esm.sh/gsap@3.12.5/",
+    "@gsap/react": "npm:@gsap/react@2.1.1",
+    "hotkeys-js": "https://esm.sh/hotkeys-js@3.13.7"
   },
   "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" },
   "deploy": {
