--- a/deno.json
+++ b/deno.json
@@ -51,6 +51,7 @@
     "@radix-ui/react-dialog": "https://esm.sh/v132/*@radix-ui/react-dialog@1.0.5?alias=react:preact/compat,@types/react:preact/compat",
     "@radix-ui/react-direction": "https://esm.sh/v132/*@radix-ui/react-direction@1.0.1?alias=react:preact/compat,@types/react:preact/compat",
     "@radix-ui/react-dismissable-layer": "https://esm.sh/v132/*@radix-ui/react-dismissable-layer@1.0.5?alias=react:preact/compat,@types/react:preact/compat",
+    "@radix-ui/react-dropdown-menu": "https://esm.sh/v132/*@radix-ui/react-dropdown-menu@2.0.6?alias=react:preact/compat,@types/react:preact/compat",
     "@radix-ui/react-focus-guards": "https://esm.sh/v132/*@radix-ui/react-focus-guards@1.0.1?alias=react:preact/compat,@types/react:preact/compat",
     "@radix-ui/react-focus-scope": "https://esm.sh/v132/*@radix-ui/react-focus-scope@1.0.4?alias=react:preact/compat,@types/react:preact/compat",
     "@radix-ui/react-id": "https://esm.sh/v132/*@radix-ui/react-id@1.0.1?alias=react:preact/compat,@types/react:preact/compat",
@@ -69,10 +70,26 @@
     "@radix-ui/react-roving-focus": "https://esm.sh/v132/*@radix-ui/react-roving-focus@1.0.4?alias=react:preact/compat,@types/react:preact/compat",
     "@radix-ui/react-use-size": "https://esm.sh/v132/*@radix-ui/react-use-size@1.0.1?alias=react:preact/compat,@types/react:preact/compat",
     "@radix-ui/react-visually-hidden": "https://esm.sh/v132/*@radix-ui/react-visually-hidden@1.0.3?alias=react:preact/compat,@types/react:preact/compat",
-    "gsap": "https://esm.sh/gsap@3.12.5",
+    "gsap": "https://esm.sh/gsap@3.12.5/",
     "gsap/": "https://esm.sh/gsap@3.12.5/",
     "@gsap/react": "npm:@gsap/react@2.1.1",
-    "hotkeys-js": "https://esm.sh/hotkeys-js@3.13.7"
+    "hotkeys-js": "https://esm.sh/hotkeys-js@3.13.7",
+    "@radix-ui/react-popover": "https://esm.sh/*@radix-ui/react-popover@1.0.7?alias=react:preact/compat,@types/react:preact/compat",
+
+    "aria-hidden": "https://esm.sh/aria-hidden@1.2.3",
+    "detect-node-es": "https://esm.sh/detect-node-es@1.1.0?target=es2022",
+    "get-nonce": "https://esm.sh/get-nonce@1.0.1",
+    "@floating-ui/dom": "https://esm.sh/v132/@floating-ui/dom@1.5.3",
+    "@floating-ui/react-dom": "https://esm.sh/v132/*@floating-ui/react-dom@2.0.2?alias=react:preact/compat,react-dom:preact/compat,@types/react:preact/compat",
+    "react-remove-scroll": "https://esm.sh/v132/*react-remove-scroll@2.5.6?alias=react:preact/compat,@types/react:preact/compat",
+    "react-remove-scroll-bar": "https://esm.sh/v132/*react-remove-scroll-bar@2.3.4?alias=react:preact/compat,@types/react:preact/compat",
+    "react-remove-scroll-bar/constants": "https://esm.sh/react-remove-scroll-bar@2.3.4/constants",
+    "react-style-singleton": "https://esm.sh/v132/*react-style-singleton@2.2.1?alias=react:preact/compat,@types/react:preact/compat",
+    "@tanstack/react-table": "https://esm.sh/*@tanstack/react-table@8.10.7?alias=react:preact/compat,@types/react:preact/compat",
+    "@tanstack/table-core": "https://esm.sh/@tanstack/table-core@8.10.7",
+    "tslib": "https://esm.sh/tslib@2.6.2",
+    "use-sidecar": "https://esm.sh/v132/*use-sidecar@1.1.2?alias=react:preact/compat,@types/react:preact/compat",
+    "use-callback-ref": "https://esm.sh/v132/*use-callback-ref@1.3.0?alias=react:preact/compat,@types/react:preact/compat"
   },
   "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" },
   "deploy": {
