--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,7 @@
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
     "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run --unstable -A -",
     "manifest": "deno task cli manifest $(pwd)",
-    "start": "deno run -A --env=.env.local --watch=static/,routes/ dev.ts --allow-write --allow-read",
+    "start": "deno run -A --watch=static/,routes/ dev.ts --allow-write --allow-read",
     "start-prod": "deno run -A --env=.env.production --watch=static/,routes/ dev.ts",
     "build": "deno run -A dev.ts build",
     "preview": "deno run -A main.ts",
