--- a/deno.json
+++ b/deno.json
@@ -102,5 +102,10 @@
     "exclude": ["**/node_modules"],
     "include": [],
     "entrypoint": "main.ts"
+  },
+  "fmt": {
+    "options": {
+      "lineWidth": 120
+    }
   }
 }
