--- a/.github/workflows/deno_deploy.yaml
+++ b/.github/workflows/deno_deploy.yaml
@@ -33,5 +33,5 @@ jobs:
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "near-bison-71" # 📝 Update the deploy project name if necessary
+          project: "mocap" # 📝 Update the deploy project name if necessary
           entrypoint: "./main.ts" # 📝 Update the entrypoint if necessary
