🧱 Create a local development environnement with supabase & manager db migrations

--- a/deno.json
+++ b/deno.json
@@ -4,8 +4,12 @@
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
     "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run --unstable -A -",
     "manifest": "deno task cli manifest $(pwd)",
-    "start": "deno run -A --watch=static/,routes/ dev.ts --allow-write --allow-read",
+    "start": "deno run -A --env=.env.local --watch=static/,routes/ dev.ts --allow-write --allow-read",
     "start-prod": "deno run -A --env=.env.production --watch=static/,routes/ dev.ts",
+    "supa-start": "supabase start || npx supabase start || echo 'Cannot run supabase. Please install it globally.'",
+    "supa-stop": "supabase stop || npx supabase stop || echo 'Cannot stop supabase. Please install it globally.'",
+    "supa-restart": "supabase stop && supabase start || npx supabase stop && npx supabase start || echo 'Cannot restart supabase. Please install it globally.'",
+    "supabase": "supabase",
     "build": "deno run -A dev.ts build",
     "preview": "deno run -A main.ts",
     "update": "deno run -A -r https://fresh.deno.dev/update ."
