--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ SUPABASE_PUBLIC_KEY=anonkeyfromsupabasestatuslog
 
 BASE_URL=http://localhost:8000
 
-API_URL=http://localhost:54321
+SUPABASE_URL=http://localhost:54321
 DB_URL=postgresql://postgres:postgres@localhost:54322/postgres
 Studio_URL=http://localhost:54323
 Inbucket_URL=http://localhost:54324
