--- a/deno.json
+++ b/deno.json
@@ -44,7 +44,7 @@
     "tailwind-merge": "https://esm.sh/tailwind-merge@1.14.0",
     "@tabler-icons-url/": "https://deno.land/x/tabler_icons_tsx@0.0.5/tsx/",
     "@babel/runtime/helpers/esm/extends": "https://esm.sh/@babel/runtime@7.23.1/helpers/esm/extends",
-    "lodash": "https://esm.sh/lodash@4.17.21",
+    "lodash": "https://esm.sh/lodash-es@4.17.21",
     "react-player": "https://esm.sh/react-player@2.16.0?alias=react:preact/compat,@types/react:preact/compat",
     "react-markdown": "https://esm.sh/react-markdown@9.0.1?alias=react:preact/compat,@types/react:preact/compat",
 
