🏗️ Change islands UI component exports

--- a/deno.json
+++ b/deno.json
@@ -32,6 +32,7 @@
     "@contexts/": "./contexts/",
     "@services/": "./services/",
     "@islands/": "./islands/",
+    "@islands/UI": "./islands/UI/index.tsx",
     "@styles/": "./styles/",
     "@utils/": "./utils/",
     "@hooks/": "./hooks/",
